Hero section completed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .grid-card {
+        @apply bg-grid-20 rounded-lg md:rounded-2xl xl:rounded-xl 2xl:rounded-2xl relative h-[70px] md:h-[150px] xl:h-[90px] 2xl:h-[100px] flex justify-center items-center p-2 animate-quint ease-[cubic-bezier(.175,.885,.32,1.2)]
+    }
+}
